fix(work-item-list-entry): long title truncate.

--- a/src/app/components/work-item-list-entry/work-item-list-entry.component.less
+++ b/src/app/components/work-item-list-entry/work-item-list-entry.component.less
@@ -75,7 +75,13 @@
       font-size: 16px;
     }
     p {
-      max-width: 100%;
+      .title-wrapper {
+        width: auto;
+        display: inline-block;
+        max-width: 95%;
+        vertical-align: text-top;
+        padding-right: 5px;
+      }
     }
   }
 
